<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_light">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lau"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/ass_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:text="@string/name_text"
            android:id="@+id/name_st"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_below="@+id/name_st"
            android:id="@+id/id_st"
            android:text="@string/id_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_below="@+id/id_st"
            android:layout_centerInParent="true"
            android:text="@string/email_text" />

    </RelativeLayout>

</FrameLayout>