<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".AddFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insert_button"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_name" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_edit_text"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:entries="@array/clothe_type" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/save_button"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@color/primary_light"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/insert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/primary_light"
            android:text="@string/insert_button" />


    </RelativeLayout>

</FrameLayout>